--- a/src/main/resources/assets/slsaddition/lang/zh_cn.json
+++ b/src/main/resources/assets/slsaddition/lang/zh_cn.json
@@ -4,5 +4,6 @@
   "carpet.rule.skipTicksForJoblessVillager.desc": "村民没有工作时，跳过村民的tick",
   "carpet.rule.creativeNoInfinitePickup.desc": "创造模式下，玩家不能无限制地拾取物品",
   "carpet.rule.autoUrl.desc": "自动识别URL并添加点击事件",
-  "carpet.rule.noBatSpawning.desc": "禁止蝙蝠生成"
+  "carpet.rule.noBatSpawning.desc": "禁止蝙蝠生成",
+  "carpet.rule.offlineFakePlayers.desc": "假玩家使用离线皮肤和uuid"
 }
