--- a/src/main/resources/assets/slsaddition/lang/en_us.json
+++ b/src/main/resources/assets/slsaddition/lang/en_us.json
@@ -20,7 +20,9 @@
   "carpet.rule.canUseHatCommand.name": "Enable hat command",
   "carpet.rule.canUseSitCommand.name": "Enable sit command",
   "carpet.rule.maxUpdateQueueSize.name": "Maximum allowed capacity of update queue",
-  
+  "carpet.rule.oldRedstoneConnectionLogic.name": "Restore the previous redstone wire connection logic",
+  "carpet.rule.optimizedOnDragonRespawn.name": "Optimize the dragon respawn",
+
   "carpet.rule.obtainableReinforcedDeepSlate.desc": "When an anvil falls on 64 dropped deepslates, they will be turned in a reinforced deepslate instead of disappearing.",
   "carpet.rule.skipTicksForJoblessVillager.desc": "For jobless/nitwit villagers, after performing a set number of tick operations, skip the 1 tick operation.",
   "carpet.rule.maxVillagersInABlock.desc": "The maximum number of villagers that can be in a block, set to -1 to disable.",
@@ -37,6 +39,8 @@
   "carpet.rule.canUseHatCommand.desc": "Allows all players to use the /hat command to place their main hand items in the helmet slot",
   "carpet.rule.canUseSitCommand.desc": "Allows all players to use the /sit command to sit down",
   "carpet.rule.maxUpdateQueueSize.desc": "Set the maximum allowed length of the update queue",
+  "carpet.rule.oldRedstoneConnectionLogic.desc": "Restore the interaction logic between the Redstone wire and the trap door to the performance of versions 1.19 and earlier",
+  "carpet.rule.optimizedOnDragonRespawn.desc": "Optimize the dragon respawn process",
 
   "carpet.rule.autoUrl.extra.0": "The URL sent by players to be directly clicked and redirected by other players",
   "carpet.rule.skipTicksForJoblessVillager.extra.0": "Set to 0 to maintain the vanilla behavior",
